@@ -1,6 +1,9 @@
 2005-10-24  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* which_lib.c: Tidied a little on lines suggested by David Ayers
+	* configure.ac: Check for ctype.h
+	* configure: regenerate
+	* config.h.in: regenerate
 
 2005-10-23  Jeremy Bettis
 
